--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Areas/Identity/Pages/Account/Login.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Areas/Identity/Pages/Account/Login.cshtml
@@ -39,7 +39,9 @@
                 </div>
                 <div>
                     <input type="hidden" name="returnUrl" id="returnUrl" />
-                    <a class="btn btn-link" id="forgot-password" asp-page="./ForgotPassword">Haben Sie Ihr Passwort vergessen?</a>
+                    <a class="btn btn-link" id="forgot-password" asp-page="./ForgotPassword">
+                        Passwort vergessen?
+                    </a>
                 </div>
             </form>
         </section>
