--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Areas/Identity/Pages/Account/Register.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Areas/Identity/Pages/Account/Register.cshtml
@@ -18,8 +18,9 @@
                     <div class="step step-active">Warenkorb</div>
                     <div class="step">Anmelden & Adresse</div>
                     <div class="step">Versandart</div>
+                    <div class="step">Bestellung ubprüfen</div>
                     <div class="step">Zahlung</div>
-                    <div class="step">Bestellung prüfen</div>
+                   
                 </div>
             </div>
  
@@ -426,12 +427,8 @@
                 </div>
             </div>
 
-           
-
             <div id="step5" class="step-form mt-5">
                 <h4>Schritt 5: Rehnung</h4>
-
-
             </div>
 
                 <div class="mt-4">
