--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
@@ -1,10 +1,10 @@
 ﻿@page
 @model ForgotPasswordConfirmation
 @{
-    ViewData["Title"] = "Forgot password confirmation";
+    ViewData["Title"] = "Bestätigung des Passwort-Wiederherstellungsprozesses";
 }
 
 <h1>@ViewData["Title"]</h1>
 <p>
-    Please check your email to reset your password.
+    Bitte überprüfen Sie Ihre E-Mails, um Ihr Passwort zurückzusetzen.
 </p>
