--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Doppelzylinder.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Doppelzylinder.cshtml
@@ -7,7 +7,7 @@
     int r = -1;
     int galeryCheker = 0;
     int countKleinZise = 1;
-
+    int countSize = 0;
 }
 
 <style>
@@ -193,28 +193,32 @@
                 </div>
                 <br/>
                 <div id="form-Size" class="shadow-lg p-3 mb-5 bg-body-tertiary rounded">
-                <div>
+                <div> 
                         <h4>
                             Aussen & Innen
-                            <input id="addAussen_Innen" class="btn btn-success" type="button" value="+" />
-                            <input id="addAussen_Innen_remove" class="btn btn-danger" type="button" value="-" />
+                        <input id="addAussen_Innen" class="btn btn-success" type="button" value="+" />
+                               
                         </h4>
                 </div>
                 
                 <div id="Aussen_Innen_ProfilDopel">
 
                     <div id="AussenProfilDopel">
-                        @foreach (var list in @ViewBag.Size)
+
+                        @foreach (var list in ViewBag.Size)
                         {
-                            <input class="form-control" name="SizeAus" id="aus" value="@list.aussen" />
-                            <input class="form-control" name="costSizeAussen" type="text" id="ausCost" value="@list.costSizeAussen" />
+                            <input id="addAussen_Innen_remove"   onclick="AussenInnenDelet(@countSize)"  class="btn btn-danger" type="button" value="-" />
+                                    <input class="form-control" name="SizeAus" id="aus" value="@list.aussen" data-index="@countSize" />
+                                    <input class="form-control" type="number" step="0.01" name="costSizeAussen" data-index="@countSize" id="ausCost" value="@list.costSizeAussen" />
+                            countSize++; 
                         }
                     </div>
                     <div id="InnenProfilDopel">
-                        @foreach (var list in @ViewBag.Size)
+                        @foreach (var list in ViewBag.Size)
                         {
-                            <input class="form-control" name="SizeInen" id="inter" value="@list.Intern" />
-                            <input class="form-control" name="costSizeIntern"  type="text" id="interCost" value="@list.costSizeIntern" />
+                                    <input class="form-control" name="SizeInen" id="inter" value="@list.Intern" data-index="@countSize" />
+                                    <input class="form-control" name="costSizeIntern" type="text" id="interCost" data-index="@countSize" value="@list.costSizeIntern" />
+                                  
                         }
                     </div>
                    
